<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="letshangllc.gradecalculator.GradeCalculatorFragment"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linGrade">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/grade_txtsz"
            android:text="@string/grade"
            android:gravity="center"
            android:id="@+id/tvGrade"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linSections"
        android:layout_below="@+id/linGrade">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_num"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/top_labels_txtsz"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_percent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/top_labels_txtsz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_percent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/top_labels_txtsz"/>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.flexbox.FlexboxLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:flexDirection="column"
                android:id="@+id/flexGrades"
                />
        </ScrollView>





    </LinearLayout>




</RelativeLayout>
