<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    tools:context="letshangllc.gradecalculator.FinalGradeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- TITLE -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/final_grade_title"
                android:text="@string/find_needed_to_pass"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary_dark"/>

            <!-- Course Avg And Final Weight -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/current_grade"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="@dimen/grade_label_txtsz"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="@dimen/grade_label_txtsz"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:gravity="center"
                        android:textSize="@dimen/grade_label_txtsz"
                        android:layout_weight="1"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/final_grade_weight"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="@dimen/grade_label_txtsz"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="@dimen/grade_label_txtsz"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:gravity="center"
                        android:textSize="@dimen/grade_label_txtsz"
                        android:layout_weight="1"/>
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_dark"/>

            <!-- Desired Outcomes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/grade_wanted"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="@dimen/grade_sublabel_txtsz"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:gravity="center"
                        android:textSize="@dimen/grade_sublabel_txtsz"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/what_if_grade"
                    android:ellipsize="end"
                    android:lines="1"

                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="@dimen/grade_sublabel_txtsz"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:gravity="center"
                        android:textSize="@dimen/grade_sublabel_txtsz"
                        android:layout_weight="1"/>
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_dark"/>

            <!-- RESULTS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/results_padding"
                android:layout_marginLeft="@dimen/final_results_margin"
                android:layout_marginRight="@dimen/final_results_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/final_grade"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_gravity="center_vertical"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0%"
                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_weight="1"/>


            </LinearLayout>

            <!-- RESULTS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/results_padding"
                android:layout_marginLeft="@dimen/final_results_margin"
                android:layout_marginRight="@dimen/final_results_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/overall_grade"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_gravity="center_vertical"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0%"
                    android:textSize="@dimen/grade_sublabel_txtsz"
                    android:layout_weight="1"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
